Refactor rendering, events, preparing for animations, better tests.